# decision-sim

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  RUNBOOK.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  turbo.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_simulation_cell_columns.py  0003_calibration_tables.py  0004_add_orchestrator_memo_to_simulation.py
apps/api/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
apps/api/app/agents/: base.py  calibration_agent.py  config.py  devil_advocate.py  evidence_curator.py  orchestrator.py  reaction_analyst.py  segment_architect.py
apps/api/app/agents/rubrics/: base.py  functional.py  signatures.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: calibration.py  health.py  segments.py  simulations.py  snapshots.py
apps/api/app/core/: calibration.py  confidence.py
apps/api/app/pipelines/: demo_cache.py  icp.py  simulation.py  snapshot.py
apps/api/app/pipelines/icp/: README.md  __init__.py  _filters.py  anchor.py  cluster.py  score.py  synthesize.py
apps/api/app/pipelines/simulation/: __init__.py  parse.py  persist.py  react.py  (+1 more)
apps/api/app/workers/: tasks.py
apps/api/scripts/: render-env.sh  render-migrate.sh  render-start.sh
apps/api/tests/: conftest.py  test_agents_base.py  test_api.py  test_calibration_integration.py  test_calibration_unit.py  test_confidence.py  test_demo_cache.py  test_icp_api.py  test_icp_integration.py  test_icp_pipeline_unit.py  test_orchestrator_integration.py  test_rubric_functional.py  test_simulation_integration.py  test_simulation_pipeline_unit.py  test_snapshot_api.py  test_snapshot_integration.py  test_snapshot_pipeline_unit.py
apps/api/tests/agents/: test_devil_advocate.py  test_evidence_curator.py  test_reaction_analyst.py  test_segment_architect.py
apps/api/tests/fixtures/: snapshot_uuids.json
(+27 files in other folders)
