[project]
name = "dsim-api"
version = "0.1.0"
description = "Decision Simulation Engine — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.3",          # for Alembic sync migrations
    "pgvector>=0.3.6",
    "alembic>=1.13.3",
    # Data validation & config
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    # Worker queue
    "rq>=2.0.0",
    "redis>=5.2.0",
    # Logging
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "pytest-timeout>=2.4.0",
]

# Step 2+ dependencies
scrape = [
    "playwright>=1.48.0",
    "trafilatura>=1.12.2",
    "tavily-python>=0.5.0",
    "exa-py>=1.0.0",
]
llm = [
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "dspy>=2.5.0",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Allow some pragmatism in test files
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.uv]
dev-dependencies = []  # use [dependency-groups] instead

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
